--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,31 +3,34 @@ name: VAYUZ MF deploy on s3
 on: 
 push:
 branch:
--master
+- master
 
 jobs:
 deploy:
 runs-on: ubuntu-latest
 
 steps:
--name: Checkout
+- name: Checkout
 uses: actions/checkout@v1
 
--name: NodeJs Setup 
+- name: NodeJs Setup 
 uses: actions/setup-node@vl 
 with: 
 node-version: 18.12.1
 
--name: Dependency Installation 
+- name: Dependency Installation 
 run: npm install 
 
--name: App Build
+- name: App Build
 run: npm run build
 
 
--name: Configure AWS Credentials
+- name: Configure AWS Credentials
 uses: aws-actions/configure-aws-credeqtials@vl
 with:
-aws-access—key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 aws-region: us-east-1
+
+- name: Deploy to AWS S3
+run: aws s3 sync build s3://anarock-staging --delete
