--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ uses: actions/checkout@v1
 - name: NodeJs Setup 
 uses: actions/setup-node@vl 
 with: 
-node-version: 18.12.1
+node-version: "18.12.1"
 
 - name: Dependency Installation 
 run: npm install 
@@ -26,7 +26,7 @@ run: npm run build
 
 
 - name: Configure AWS Credentials
-uses: aws-actions/configure-aws-credeqtials@vl
+uses: aws-actions/configure-aws-credentials@vl
 with:
 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
