--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,9 @@ runs-on: ubuntu-latest
 
 steps:
 - name: Checkout
-uses: actions/checkout@v1
-
+uses: actions/checkout@v2
 - name: NodeJs Setup 
-uses: actions/setup-node@vl 
+uses: actions/setup-node@v2
 with: 
 node-version: "18.12.1"
 
