--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: VAYUZ Bhuvanesh S3 deployment testing
 on:
   push:
     branches:
-      - master # Change this to your main branch 
+      - master
 
 jobs:
   deploy:
