--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws s3 cp /dist s3://anarock-staging/panel/ --recursive --exclude "node_modules/*" --acl public-read
+          aws s3 cp dist/ s3://anarock-staging/panel/ --recursive --exclude "node_modules/*" --acl public-read
         env:
           AWS_DEFAULT_REGION: us-east-1 # Change this to your desired region
